--- a/application/views/index.html
+++ b/application/views/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.ttf">
         <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.woff">
         <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.woff2">
-        
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     	<script src="js/slideShow.js"></script>
         <script src="js/jquery.min.js"></script>
@@ -23,7 +23,7 @@
 		<script src="js/app.js"></script>
 		<script src="js/Cjsproducto.js"></script>
 		<script src="js/Cjslogin.js"></script>
-		<script src="js/factoria.js"></script>			
+		<script src="js/factoria.js"></script>	
 	</head> 
 	<body >
 			<div ng-view ></div>
