--- a/template/Vventas.html
+++ b/template/Vventas.html
@@ -1,3 +1,197 @@
-Ventas :D
+<!DOCTYPE HTML>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/styleInicio.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+	<title>Productos</title>
+</head>
+<body>
+	<div class="container">
+	<div class="col-md-1"></div>
+	<div id="centro" class="col-md-10">
+		<!--Primera fila-->
+		<div id="portada" class="row">
+			<div class="col-md-2">
+				<div id="logo">
+					<img class="img-responsive" src="img/logo.png">
+				</div>
+			</div>
+			<div class="col-md-8">
+				<p id="name"><marquee>M A L I B U</marquee></p>
+				<p id="lemaE">Tu Preferencia nos hace cada vez m&aacute;s Grandes</p>
+			</div>
+			<div class="col-md-2">
+				<a>CERRAR SESI&Oacute;N</a>
+			</div>
+		</div>
 
-    
+		<div  class="row">
+			<div class="col-md-2"></div>
+            <div id="fondo" class="col-md-8">
+                <div class="img" id="slideShowImages">
+                    <img class="img-responsive" src="img/slide3.jpg" alt="slide 3" />
+                    <img class="img-responsive" src="img/slide4.jpg" alt="slide 4" />
+                    <img class="img-responsive" src="img/slide6.jpg" alt="slide 6" />
+                    <img class="img-responsive" src="img/slide7.jpg" alt="slide 7" />
+                    <img class="img-responsive" src="img/slide8.jpg" alt="slide 8" />
+                    <img class="img-responsive" src="img/slide10.jpg" alt="slide 10" />
+                </div> 
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+
+		<div class="row">
+			<div class="col-md-12">
+				<input id="carrito" name="Ocarrito" class="btn btn-primary" value="Ver Carrito" type="submit" onclick = ""/>
+			</div>
+		</div>
+
+		<!--Segunda fila-->
+		<div class="row">
+
+			<div class="col-md-12 col-sm-12">
+				<div id="prod" class="row">
+
+					<!--primer producto-->
+					<div class='producto col-md-3 col-sm-12 col-xs-12'>
+						<div id='cajita'>
+							<form method='POST' class='addCarrito'>
+								<div class='row'>
+									<div class='imagenF col-md-12 col-sm-12'>
+										<center><img class='img-responsive' src='img/gloria.png'></center>
+									</div>
+								</div>
+								<div class='row'>
+									<div class='col-md-12 col-sm-12 col-xs-12'>
+										<p>Leche Gloria</p>
+										<p>Precio : 3.00</span></p>
+										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
+										<label>Unidad de medida</label>
+									</div>
+								</div>
+								<div>
+									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
+								</div>
+							</form>
+						</div>
+					</div>
+
+					<!--segundo producto-->
+					<div class='producto col-md-3 col-sm-12 col-xs-12'>
+						<div id='cajita'>
+							<form method='POST' class='addCarrito'>
+								<div class='row'>
+									<div class='imagenF col-md-12 col-sm-12'>
+										<center><img class='img-responsive' src='img/gloria.png'></center>
+									</div>
+								</div>
+								<div class='row'>
+									<div class='col-md-12 col-sm-12 col-xs-12'>
+										<p>Leche Gloria</p>
+										<p>Precio : 3.00</span></p>
+										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
+										<label>Unidad de medida</label>
+									</div>
+								</div>
+								<div>
+									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
+								</div>
+							</form>
+						</div>
+					</div>
+
+					<!--tercer producto-->
+					<div class='producto col-md-3 col-sm-12 col-xs-12'>
+						<div id='cajita'>
+							<form method='POST' class='addCarrito'>
+								<div class='row'>
+									<div class='imagenF col-md-12 col-sm-12'>
+										<center><img class='img-responsive' src='img/gloria.png'></center>
+									</div>
+								</div>
+								<div class='row'>
+									<div class='col-md-12 col-sm-12 col-xs-12'>
+										<p>Leche Gloria</p>
+										<p>Precio : 3.00</span></p>
+										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
+										<label>Unidad de medida</label>
+									</div>
+								</div>
+								<div>
+									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
+								</div>
+							</form>
+						</div>
+					</div>
+
+					<!--cuarto producto-->
+					<div class='producto col-md-3 col-sm-12 col-xs-12'>
+						<div id='cajita'>
+							<form method='POST' class='addCarrito'>
+								<div class='row'>
+									<div class='imagenF col-md-12 col-sm-12'>
+										<center><img class='img-responsive' src='img/gloria.png'></center>
+									</div>
+								</div>
+								<div class='row'>
+									<div class='col-md-12 col-sm-12 col-xs-12'>
+										<p>Leche Gloria</p>
+										<p>Precio : 3.00</span></p>
+										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
+										<label>Unidad de medida</label>
+									</div>
+								</div>
+								<div>
+									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
+								</div>
+							</form>
+						</div>
+					</div>
+
+					<!--quinto producto-->
+					<div class='producto col-md-3 col-sm-12 col-xs-12'>
+						<div id='cajita'>
+							<form method='POST' class='addCarrito'>
+								<div class='row'>
+									<div class='imagenF col-md-12 col-sm-12'>
+										<center><img class='img-responsive' src='img/gloria.png'></center>
+									</div>
+								</div>
+								<div class='row'>
+									<div class='col-md-12 col-sm-12 col-xs-12'>
+										<p>Leche Gloria</p>
+										<p>Precio : 3.00</span></p>
+										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
+										<label>Unidad de medida</label>
+									</div>
+								</div>
+								<div>
+									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+	<div class="col-md-1"></div>
+	</div>
+	<footer>
+		<div class="row">
+			<div id="footer" class="col-md-12">
+				<p>Negocios Malibu</p>
+				<p>Av. Ramon Castilla N° 808</p>
+				<p>negociosmalibu@outlook.com</p>
+				<p>Chulucanas, Piura, Per&uacute;</p>
+			</div>
+		</div>
+	</footer>
+	<script src="js/slideShow.js"></script>
+</body>
+</html>
