--- a/template/Login.html
+++ b/template/Login.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="Ctrlogeo">
+<div id="central" class="container" ng-controller="Ctrlogeo">
 	
 	<nav class="navbar navbar-fixed-top navbar-inverse">
 		            
@@ -41,27 +41,26 @@
             <div class="row">
                 <div class="col-md-1">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <div class="row">
-                        <div id="titulo" class="col-md-12">
-                            <h1><center><b>"EL PULPIN"</b><br><h3>Tu Preferencia nos hace cada vez m&aacute;s Grandes</h3></br></center></h1>
+                        <div class="col-md-12">
+                            <h1><center><b>MALIBU</b><br><h3>Tu Preferencia nos hace cada vez m&aacute;s Grandes</h3></br></center></h1>
                         </div>
-                        <center>
-                        	<div class="foot">
-                                <p>Av. no hay todo es en online N° 808</p> 
-                                <p>proyecto_elpulpin@outlook.com</p>
-                                <p>Castilla, Piura, Per&uacute;</p>
-                       		 </div> 
-                    	</center>
-                           
                     </div>
-                    
+                    <div  class="row">
+                        <div class="col-md-12">
+                            <div class="img" id="slideShowImages">
+                                <img class="img-responsive" src="img/slide6.jpg" alt="slide 6" />
+                            </div> 
+                        </div>
+                    </div>
                 </div> 
-
+                <div class="col-md-1">
+                </div>
                 <div class="col-md-4" ng-show="flag">    
                     <div class="row">   
                         <div class="col-md-12">
-                            <div>¿No tienes una cuenta?<br><h1>Registrate</h1></div>
+                            <div><h3>¿No tienes una cuenta?</h3><br><h1>Registrate</h1></div>
                             
                             <form  class="form-horizontal" role="form" name="FRegistro" novalidate>
                                 <div class="form-group">
@@ -83,7 +82,7 @@
 
                                 <div class="form-group">
                                     <div>
-                                        <input name="Dnis" type="number" id="dni" class="form-control" placeholder="Dni" ng-model="registro.dni" min="9999999" max="99999999" required>
+                                        <input name="Dnis" type="number" id="dni" class="form-control" placeholder="Dni" ng-model="registro.dni" min="10000000" max="99999999" required>
                                         <span style = "color:red" ng-show = "FRegistro.Dnis.$dirty && FRegistro.Dnis.$invalid">
                                         <span ng-show = "FRegistro.Dnis.$error.required">Dni is required.</span></span>
                                     </div>
@@ -99,7 +98,7 @@
 
                                 <div class="form-group">
                                     <div>
-                                       <input  name="Teles" type="number" id="telefono" class="form-control" placeholder="Telefono min 9 digitos max 15" ng-model="registro.telefono"  max ="999999999999999" required> 
+                                       <input  name="Teles" type="number" id="telefono" class="form-control" placeholder="Telefono min 9 digitos max 15" ng-model="registro.telefono"  min="100000000" max ="9999999999" required> 
                                        <span style = "color:red" ng-show = "FRegistro.Teles.$dirty && FRegistro.Teles.$invalid">
                                         <span ng-show = "FRegistro.Teles.$error.required">Telefono is required.</span></span>
 
@@ -108,9 +107,7 @@
                                                                
                                 <button  class="btn btn-lg btn-primary " ng-click="btnreset()">Reset</button>
                                 <button  class="btn btn-lg btn-primary " 
-                                ng-disabled = "FRegistro.Rnombre.$dirty && FRegistro.Rnombre.$invalid || FRegistro.Apellidos.$dirty && FRegistro.Apellidos.$invalid || FRegistro.Dnis.$dirty &&
-                                FRegistro.Dnis.$invalid || FRegistro.Emails.$dirty &&
-                                FRegistro.Emails.$invalid" ng-click="btnregistro()">Ingresar</button>
+                                ng-disabled = "!FRegistro.$valid" ng-click="btnregistro()">Ingresar</button>
                             </form>
                             
                         </div>
@@ -123,9 +120,9 @@
                             <div id="tit">falta poco para terminar</div>
                             <p><h1>Crear Usuario </h1></p>
                             <form method="get" class="form-horizontal" role="form" name="Fregistrar">
-                                <input name="Usuario" type="text" id="usuario" class="form-control " placeholder="Usuario" ng-model="registro.user" maxlength ="10" ><br>
-                                <input name="Password" type="password" id="password" class="form-control" placeholder="Password" ng-model="registro.pass" maxlength ="10" ><br>
-                                <button  class="btn btn-lg btn-primary " ng-click="btnregistrar()">Registrar</button>
+                                <input name="Usuario" type="text" id="usuario" class="form-control " placeholder="Usuario" ng-model="registro.user" minlength ="6" maxlength ="10" required><br>
+                                <input name="Password" type="password" id="password" class="form-control" placeholder="Password" ng-model="registro.pass" minlength ="6" maxlength ="10" required><br>
+                                <button class="btn btn-lg btn-primary" ng-disabled="!Fregistrar.$valid" ng-click="btnregistrar(registro)">Registrar</button>
                             </form>
                             
                         </div>
