--- a/template/Vventas.html
+++ b/template/Vventas.html
@@ -1,15 +1,40 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/styleInicio.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-	<title>Productos</title>
-</head>
-<body>
+<div ng-controller="Ctrlventa">
+
+	<nav class="navbar navbar-fixed-top navbar-inverse">
+	            
+		<div class="container" >
+		             
+		    <div class="navbar-brand navbar-left">
+		    	<img src="Imagenes/icono.ico" width="70" height="70">
+		         
+		    </div>  
+		    <div class="navbar-brand">
+		    	Transaccion Productos
+		    </div>
+		     	
+		    <div class="collapse navbar-collapse navHeaderCollapse">
+			    <ul class=" nav navbar-nav navbar-right">
+			    	<li><a type="label" ng-model="User">
+			              <span class="glyphicon glyphicon-parents"></span>$</a>
+			        </li>
+			    	<li><a class="btn btn-link" type="button" ng-click="carrito()">
+			              <span class="glyphicon glyphicon-shopping-cart"></span> CARRITO </a>
+			          </li>
+			        <li><a class="btn btn-link" type="button" ng-click="cerrar()">
+			              <span class="glyphicon glyphicon-home"></span> CERRAR SESI&Oacute;N </a>
+			        </li>
+			          
+			    </ul>
+		    </div>
+		                             
+		</div>
+		
+	</nav>
+
+	<div class="jumbotron">
+
+	</div>
+
 	<div class="container">
 	<div class="col-md-1"></div>
 	<div id="centro" class="col-md-10">
@@ -24,157 +49,57 @@
 				<p id="name"><marquee>M A L I B U</marquee></p>
 				<p id="lemaE">Tu Preferencia nos hace cada vez m&aacute;s Grandes</p>
 			</div>
-			<div class="col-md-2">
-				<a>CERRAR SESI&Oacute;N</a>
-			</div>
+			
 		</div>
 
-		<div  class="row">
-			<div class="col-md-2"></div>
-            <div id="fondo" class="col-md-8">
-                <div class="img" id="slideShowImages">
-                    <img class="img-responsive" src="img/slide3.jpg" alt="slide 3" />
-                    <img class="img-responsive" src="img/slide4.jpg" alt="slide 4" />
-                    <img class="img-responsive" src="img/slide6.jpg" alt="slide 6" />
-                    <img class="img-responsive" src="img/slide7.jpg" alt="slide 7" />
-                    <img class="img-responsive" src="img/slide8.jpg" alt="slide 8" />
-                    <img class="img-responsive" src="img/slide10.jpg" alt="slide 10" />
-                </div> 
-            </div>
-            <div class="col-md-2"></div>
-        </div>
+		<div class="container">
+			<ul class="nav nav-pills">
+			    <li><a type="button" class="btn btn-primary" ng-click="b">Home</a></li>
+			    <li><a type="button" class="btn btn-primary" ng-click="a">Menu 1</a></li>
+			    <li><a type="button" class="btn btn-primary">Menu 2</a></li>
+			    <li><a type="button" class="btn btn-primary">Menu 3</a></li>
+			<applet></applet>
+			</ul>
 
-		<div class="row">
-			<div class="col-md-12">
-				<input id="carrito" name="Ocarrito" class="btn btn-primary" value="Ver Carrito" type="submit" onclick = ""/>
-			</div>
 		</div>
 
 		<!--Segunda fila-->
+		<div class="col-sm-8">
+				     	<h1>Lista de Productos</h1>
+				        <input type="search"  class="form-control" ng-model="busqueda"   placeholder="Buscar Producto"><br>
+		s</div>
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
+				
 				<div id="prod" class="row">
-
-					<!--primer producto-->
-					<div class='producto col-md-3 col-sm-12 col-xs-12'>
-						<div id='cajita'>
-							<form method='POST' class='addCarrito'>
-								<div class='row'>
-									<div class='imagenF col-md-12 col-sm-12'>
-										<center><img class='img-responsive' src='img/gloria.png'></center>
+					<!--listar producto-->
+					<div  ng-repeat="prod in Lprod | filter: busqueda">
+						<div class='producto col-md-3 col-sm-12 col-xs-12'>
+							<div id='cajita'>
+								<form  class='addCarrito'>
+									<div class='row'>
+										<div class='imagenF col-md-12 col-sm-12'>
+											<center><img class='img-responsive' src='img/gloria.png'></center>
+										</div>
 									</div>
-								</div>
-								<div class='row'>
-									<div class='col-md-12 col-sm-12 col-xs-12'>
-										<p>Leche Gloria</p>
-										<p>Precio : 3.00</span></p>
-										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
-										<label>Unidad de medida</label>
+									<div class='row'>
+										<div class='col-md-12 col-sm-12 col-xs-12'>
+											<p>{{prod.nombreprod}}</p>
+											<p>{{prod.precio | currency: $ }}</p>
+											<p>{{prod.stock }}</p>
+											<input type='text' name='cantidad' id='total' ng-model="prod.cant" placeholder='Cantidad'/>
+											<label>Unidad de medida</label>
+										</div>
 									</div>
-								</div>
-								<div>
-									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
-								</div>
-							</form>
+									<div>
+										<a type="button" class="btn btn-primary" ng-click="addcarrito"><span class="glyphicon glyphicon-download-alt"></span> Agregar al Carrito</a>
+									</div>
+								</form>
+							</div>
 						</div>
-					</div>
+					</div>	
 
-					<!--segundo producto-->
-					<div class='producto col-md-3 col-sm-12 col-xs-12'>
-						<div id='cajita'>
-							<form method='POST' class='addCarrito'>
-								<div class='row'>
-									<div class='imagenF col-md-12 col-sm-12'>
-										<center><img class='img-responsive' src='img/gloria.png'></center>
-									</div>
-								</div>
-								<div class='row'>
-									<div class='col-md-12 col-sm-12 col-xs-12'>
-										<p>Leche Gloria</p>
-										<p>Precio : 3.00</span></p>
-										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
-										<label>Unidad de medida</label>
-									</div>
-								</div>
-								<div>
-									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
-								</div>
-							</form>
-						</div>
-					</div>
-
-					<!--tercer producto-->
-					<div class='producto col-md-3 col-sm-12 col-xs-12'>
-						<div id='cajita'>
-							<form method='POST' class='addCarrito'>
-								<div class='row'>
-									<div class='imagenF col-md-12 col-sm-12'>
-										<center><img class='img-responsive' src='img/gloria.png'></center>
-									</div>
-								</div>
-								<div class='row'>
-									<div class='col-md-12 col-sm-12 col-xs-12'>
-										<p>Leche Gloria</p>
-										<p>Precio : 3.00</span></p>
-										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
-										<label>Unidad de medida</label>
-									</div>
-								</div>
-								<div>
-									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
-								</div>
-							</form>
-						</div>
-					</div>
-
-					<!--cuarto producto-->
-					<div class='producto col-md-3 col-sm-12 col-xs-12'>
-						<div id='cajita'>
-							<form method='POST' class='addCarrito'>
-								<div class='row'>
-									<div class='imagenF col-md-12 col-sm-12'>
-										<center><img class='img-responsive' src='img/gloria.png'></center>
-									</div>
-								</div>
-								<div class='row'>
-									<div class='col-md-12 col-sm-12 col-xs-12'>
-										<p>Leche Gloria</p>
-										<p>Precio : 3.00</span></p>
-										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
-										<label>Unidad de medida</label>
-									</div>
-								</div>
-								<div>
-									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
-								</div>
-							</form>
-						</div>
-					</div>
-
-					<!--quinto producto-->
-					<div class='producto col-md-3 col-sm-12 col-xs-12'>
-						<div id='cajita'>
-							<form method='POST' class='addCarrito'>
-								<div class='row'>
-									<div class='imagenF col-md-12 col-sm-12'>
-										<center><img class='img-responsive' src='img/gloria.png'></center>
-									</div>
-								</div>
-								<div class='row'>
-									<div class='col-md-12 col-sm-12 col-xs-12'>
-										<p>Leche Gloria</p>
-										<p>Precio : 3.00</span></p>
-										<input type='text' name='cantidad' id='total' placeholder='Cantidad'/>
-										<label>Unidad de medida</label>
-									</div>
-								</div>
-								<div>
-									<input name='addCar' type='submit' class='agregar btn btn-primary' value='Agregar a mi Carrito'/>
-								</div>
-							</form>
-						</div>
-					</div>
 				</div>
 			</div>
 
@@ -192,6 +117,4 @@
 			</div>
 		</div>
 	</footer>
-	<script src="js/slideShow.js"></script>
-</body>
-</html>
+</div>
