--- a/application/views/index.html
+++ b/application/views/index.html
@@ -4,29 +4,31 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Sistema de Ventas Online</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
         <link rel="icon" type="image/x-icon" href="Imagenes/iconotienda.ico"> 
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <!-- Optional theme -->
-        <link rel="stylesheet" href="css/bootstrap-theme.css">       
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/styleInicio.css">     
         <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.ttf">
         <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.woff">
         <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.woff2">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
-
-    	<script src="js/slideShow.js"></script>
-        <script src="js/jquery.min.js"></script>
-		<script src="js/angular.min.js"></script>		
-		<script src="js/angular-route.min.js"></script>	
-		<script src="js/app.js"></script>
-		<script src="js/Cjsproducto.js"></script>
-		<script src="js/Cjslogin.js"></script>
-		<script src="js/factoria.js"></script>	
+        
 	</head> 
 	<body >
 			<div ng-view ></div>
-			
+			<script src="js/slideShow.js"></script>
+            <script src="js/jquery.min.js"></script>
+            <script src="js/slideShow.js"></script>
+            <script src="js/angular.min.js"></script>       
+            <script src="js/angular-route.min.js"></script> 
+            <script src="js/app.js"></script>
+            <script src="js/Cjsadmin.js"></script>
+            <script src="js/Cjsventa.js"></script>
+            <script src="js/Cjslogin.js"></script>
+            <script src="js/factoria.js"></script>  
     </body>
 </html>
