--- a/application/views/index.html
+++ b/application/views/index.html
@@ -27,6 +27,8 @@
             <script src="js/angular-route.min.js"></script> 
             <script src="js/app.js"></script>
             <script src="js/Cjsboleta.js"></script>
+            <script src="js/Cjsadministrador.js"></script>
+            <script src="js/Cjsproveedor.js"></script>
             <script src="js/Cjsadmin.js"></script>
             <script src="js/Cjsventa.js"></script>
             <script src="js/Cjslogin.js"></script>
